# DKCloudID_NFC_Android

./: README.md  bug list.txt  build.gradle  settings.gradle
app/: CMakeLists.txt  app-release.apk  build.gradle
app/src/androidTest/java/com/huang/lochy/: ApplicationTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/DKCloudID/crypt/: ApduTransceive.java  DKCloudID.java  DKCloudIDException.java  GetNetPicture.java  IDCard.java  IDCardData.java  MsgCrypt.java  StringTool.java  UtilTool.java
app/src/main/java/com/dk/bleNfc/: BleNfcDeviceService.java
app/src/main/java/com/dk/bleNfc/BleManager/: BleDevInitInfo.java  BleManager.java  Scanner.java  ScannerCallback.java
app/src/main/java/com/dk/bleNfc/DeviceManager/: BleNfcDevice.java  ComByteManager.java  ComByteManagerCallback.java  DeviceManager.java  DeviceManagerCallback.java
app/src/main/java/com/dk/bleNfc/Exception/: CardNoResponseException.java  DeviceNoResponseException.java
app/src/main/java/com/dk/bleNfc/card/: Card.java  (+8 more)
app/src/main/java/com/hdos/idCardUartDevice/: publicSecurityIDCardLib.java
app/src/main/java/com/huang/lochy/: DKCloudID.java  FinancialCard.java  GetNetPicture.java  IDCardData.java  MainActivity.java  MyTTS.java  SZTCard.java  StringTool.java  UtilTool.java
app/src/main/res/drawable-hdpi/: clear_button.xml  disconnect_button.xml  icon_search_button.xml  write_button.xml
app/src/main/res/layout/: activity_main.xml  layout.xml
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: filter_nfc.xml
app/src/test/java/com/huang/lochy/: ExampleUnitTest.java
(+5 files in other folders)
